--- a/.htaccess
+++ b/.htaccess
@@ -65,3 +65,21 @@ RewriteRule ^(.*)$ $1.php [L]
     # Política de Referência: só envia o cabeçalho Referer para a mesma origem
     Header set Referrer-Policy "same-origin"
 </IfModule>
+# ----------------------------------------------------------------------
+# MELHORIAS: Ativar Cache do Navegador
+# ----------------------------------------------------------------------
+<IfModule mod_expires.c>
+  ExpiresActive On
+  ExpiresByType image/jpg "access 1 year"
+  ExpiresByType image/jpeg "access 1 year"
+  ExpiresByType image/gif "access 1 year"
+  ExpiresByType image/png "access 1 year"
+  ExpiresByType image/webp "access 1 year"
+  ExpiresByType text/css "access 1 month"
+  ExpiresByType application/pdf "access 1 month"
+  ExpiresByType application/javascript "access 1 month"
+  ExpiresByType application/x-javascript "access 1 month"
+  ExpiresByType image/x-icon "access 1 year"
+  ExpiresDefault "access 2 days"
+</IfModule>
+# ----------------------------------------------------------------------
